tests/errors/semantic/wrong_arg_count/source.wren
import "ifj25" for Ifj
class Program {
    static main() {
        var a = foo(1);
    }

    static foo() {
    }
}
